create handleSubmit and createCard function for search characters button

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
             <h3>Welcome to Rick and Morty Search!</h3>
         </div>
 
-        <div class="container">
+        <div class="form-container">
             <form class="character-search">
                 <h4>Search by Character:</h4>
                 <input
-                type="text"    
-                name="name"
-                value=""
-                placeholder="Enter a characters name"
-                class="input-text"
+                    type="text"    
+                    name="name"
+                    value=""
+                    placeholder="Enter a characters name"
+                    class="input-text"
                 />
                 <input
                     type="submit"
@@ -38,11 +38,11 @@
             <form class="location-search">
                 <h4>Search by Location:</h4>
                 <input
-                type="text"    
-                name="location"
-                value=""
-                placeholder="Enter a location"
-                class="input-text"
+                    type="text"    
+                    name="location"
+                    value=""
+                    placeholder="Enter a location"
+                    class="input-text"
                 />
                 <input
                     type="submit"
@@ -55,11 +55,11 @@
             <form class="episode-search">
                 <h4>Search by episode:</h4>
                 <input
-                type="text"    
-                name="episode"
-                value=""
-                placeholder="Enter an Episode"
-                class="input-text"
+                    type="text"    
+                    name="episode"
+                    value=""
+                    placeholder="Enter an Episode"
+                    class="input-text"
                 />
                 <input
                     type="submit"
@@ -71,6 +71,8 @@
             <br />
             <br />
         </div>
+
+        <div id="card-container"></div>
 
         <script type="text/javascript"  src="index.js"></script>
     </body>
