fixed functrion names for each operation: character, location, episode

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <br />
         </div>
 
-        <div id="card-container"></div>
+        <div id="character-card-container"></div>
 
         <script type="text/javascript"  src="index.js"></script>
     </body>
