create <div> contaiers for location cards and episode cards in index.html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
 
         <div id="character-card-container"></div>
 
+        <div id="location-card-container"></div>
+
+        <div id="episode-card-container"></div>
+
         <script type="text/javascript"  src="index.js"></script>
     </body>
 </html>
