create functions fetchEpisode and createEpisodeCard in order to search episodes using episode search button - tested and wokring

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <br />
             <form class="episode-search">
                 <h4>Search by episode:</h4>
+                <h4>(use season # and episode # format: S##E##)</h4>
                 <input
                     type="text"    
                     name="episode"
