--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
             <br />
         </div>
 
+        <div id="Rick-and-Morty-container"></div>
+
         <div id="character-card-container"></div>
 
         <div id="location-card-container"></div>
