updated css styling for cards

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             <br />
         </div>
 
-        <div id="character-card-container"></div>
+        <div id="character-card-container" class="results-container"></div>
 
-        <div id="location-card-container"></div>
+        <div id="location-card-container" class="results-container"></div>
 
-        <div id="episode-card-container"></div>
+        <div id="episode-card-container" class="results-container"></div>
 
         <script type="text/javascript"  src="index.js"></script>
     </body>
