--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </form>
             <br />
             <form class="episode-search">
-                <h2>Search by episode:</h2>
+                <h2>Search by Episode:</h2>
                 <h4>(use season # and episode # format: S##E##)</h4>
                 <input
                     type="text"    
