turned off autocomplete on input form search boxes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     value=""
                     placeholder="Enter a characters name"
                     class="input-text"
+                    autocomplete="off"
                 />
                 <input
                     type="submit"
@@ -43,6 +44,7 @@
                     value=""
                     placeholder="Enter a location"
                     class="input-text"
+                    autocomplete="off"
                 />
                 <input
                     type="submit"
@@ -61,6 +63,7 @@
                     value=""
                     placeholder="Enter an Episode"
                     class="input-text"
+                    autocomplete="off"
                 />
                 <input
                     type="submit"
